--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
     </nav>
     <main>
-      <!--Dashboard?-->
+      <!--Dashboard-->
       <section class="dashboard">
         <h2>Dashboard</h2>
         <input type="text" placeholder="type something here" />
@@ -79,10 +79,35 @@
           <span id="alertClose">x</span>
         </div>
       </section>
-      <section class="traffic"></section>
-      <section class="daily-traffic"></section>
-      <section class="mobile-user"></section>
-      <section class="social-stats"></section>
+      <section class="traffic">
+        <div class="traffic-header">
+          <h3>TRAFFIC</h3>
+          <div class="buttons">
+            <span class="selectedBtn">Hourly</span>
+            <span>Daily</span>
+            <span>Weekly</span>
+            <span>Monthly</span>
+          </div>
+        </div>
+        <div class="traffic-graph">
+            <img class="chart1" src="assets/charts_prov/chart1.png" alt="">
+        </div>
+      </section>
+      <section class="daily-traffic">
+          <h3>DAILY TRAFFIC</h3>
+          <div class="daily-graph">
+              <img class="chart1" src="assets/charts_prov/chart1.png" alt="">
+          </div>
+      </section>
+      <section class="mobile-user">
+          <h3>MOBILE USERS</h3>
+          <div class="mobile-graph">
+              <img src="assets/charts_prov/chart1.png" alt="" class="chart1">
+          </div>
+      </section>
+      <section class="social-stats">
+          
+      </section>
       <section class="new-members"></section>
       <section class="recent-activity"></section>
       <section class="messages"></section>
