--- a/index.html
+++ b/index.html
@@ -90,28 +90,172 @@
           </div>
         </div>
         <div class="traffic-graph">
-            <img class="chart1" src="assets/charts_prov/chart1.png" alt="">
+          <img class="chart1" src="assets/charts_prov/chart1.png" alt="" />
         </div>
       </section>
       <section class="daily-traffic">
-          <h3>DAILY TRAFFIC</h3>
-          <div class="daily-graph">
-              <img class="chart1" src="assets/charts_prov/chart1.png" alt="">
-          </div>
+        <h3>DAILY TRAFFIC</h3>
+        <div class="daily-graph">
+          <img class="chart1" src="assets/charts_prov/chart2.png" alt="" />
+        </div>
       </section>
       <section class="mobile-user">
-          <h3>MOBILE USERS</h3>
-          <div class="mobile-graph">
-              <img src="assets/charts_prov/chart1.png" alt="" class="chart1">
-          </div>
+        <h3>MOBILE USERS</h3>
+        <div class="mobile-graph">
+          <img src="assets/charts_prov/chart3.png" alt="" class="chart1" />
+        </div>
       </section>
       <section class="social-stats">
-          
+        <h3>SOCIAL STATS</h3>
+        <div class="social-cards">
+          <div class="facebook">
+            <div class="social-icon">
+              <svg
+                viewBox="0 0 24 24"
+                fill="white"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M23.998 12c0-6.628-5.372-12-11.999-12C5.372 0 0 5.372 0 12c0 5.988 4.388 10.952 10.124 11.852v-8.384H7.078v-3.469h3.046V9.356c0-3.008 1.792-4.669 4.532-4.669 1.313 0 2.686.234 2.686.234v2.953H15.83c-1.49 0-1.955.925-1.955 1.874V12h3.328l-.532 3.469h-2.796v8.384c5.736-.9 10.124-5.864 10.124-11.853z"
+                />
+              </svg>
+            </div>
+            <div class="info">
+              <h4 class="socialPlatform">Facebook</h4>
+              <span class="subscriptions">10,320</span>
+            </div>
+          </div>
+          <div class="instagram">
+            <div class="social-icon">
+              <svg
+                viewbox="0 0 24 24"
+                fill="white"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913a5.885 5.885 0 001.384 2.126A5.868 5.868 0 004.14 23.37c.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558a5.898 5.898 0 002.126-1.384 5.86 5.86 0 001.384-2.126c.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913a5.89 5.89 0 00-1.384-2.126A5.847 5.847 0 0019.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227a3.81 3.81 0 01-.899 1.382 3.744 3.744 0 01-1.38.896c-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421a3.716 3.716 0 01-1.379-.899 3.644 3.644 0 01-.9-1.38c-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678a6.162 6.162 0 100 12.324 6.162 6.162 0 100-12.324zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405a1.441 1.441 0 01-2.88 0 1.44 1.44 0 012.88 0z"
+                />
+              </svg>
+            </div>
+            <div class="info">
+                <h4 class="socialPlatform">Instagram</h4>
+                <span class="subscriptions">16,445</span>
+              </div>
+          </div>
+          <div class="twitter">
+            <div class="social-icon">
+              <svg
+                viewbox="0 0 24 24"
+                fill="white"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M23.954 4.569a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.691 8.094 4.066 6.13 1.64 3.161a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.061a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.937 4.937 0 004.604 3.417 9.868 9.868 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.054 0 13.999-7.496 13.999-13.986 0-.209 0-.42-.015-.63a9.936 9.936 0 002.46-2.548l-.047-.02z"
+                />
+              </svg>
+            </div>
+            <div class="info">
+                <h4 class="socialPlatform">Twitter</h4>
+                <span class="subscriptions">22,189</span>
+              </div>
+          </div>
+        </div>
       </section>
-      <section class="new-members"></section>
-      <section class="recent-activity"></section>
-      <section class="messages"></section>
-      <section class="settings"></section>
+      <section class="new-members">
+          <h3>NEW MEMBERS</h3>
+          <div class="new-members-cards">
+              <div class="member-card">
+                  <img src="assets/images/member-1.jpg" alt="girl profile picture">
+                  <span>Victoria Chambers</span>
+                  <span>victoria.chambers@example.com</span>
+                  <span>10/05/2021</span>
+              </div>
+              <div class="member-card">
+                  <img src="assets/images/member-2.jpg" alt="girl profile picture">
+                  <span>Dalk Byrd</span>
+                  <span>dalk.byrd@example.com</span>
+                  <span>15/10/2021</span>
+              </div>
+              <div class="member-card">
+                  <img src="assets/images/member-3.jpg" alt="girl profile picture">
+                  <span>Dawn Wood</span>
+                  <span>dawn.wood@example.com</span>
+                  <span>07/07/2021</span>
+              </div>
+              <div class="member-card">
+                  <img src="assets/images/member-4.jpg" alt="girl profile picture">
+                  <span>Oliver Dan</span>
+                  <span>oliver.dan@example.com</span>
+                  <span>12/08/2021</span>
+              </div>
+          </div>
+      </section>
+      <section class="recent-activity">
+          <h3>RECENT ACTIVITY</h3>
+          <div class="recent-activity-cards">
+              <div class="member-card-2">
+                <img src="assets/images/member-1.jpg" alt="girl profile picture">
+                <span><strong>Victoria Chambers</strong> commented on <strong>WebApps's SEO Tips</strong></span>
+                <span>4 hours ago</span>
+              </div>
+              <div class="member-card-2">
+                <img src="assets/images/member-2.jpg" alt="profile picture">
+                <span><strong>Dalk Byrd</strong> liked the post <strong>Facebook's Changes for 2021</strong></span>
+                <span>5 hours ago</span>
+              </div>
+              <div class="member-card-2">
+                <img src="assets/images/member-3.jpg" alt="profile picture">
+                <span><strong>Dawn Wood</strong> commented on <strong>Facebook's Changes for 2021</strong></span>
+                <span>5 hours ago</span>
+              </div>
+              <div class="member-card-2">
+                <img src="assets/images/member-4.jpg" alt="profile picture">
+                <span><strong>Dan Oliver</strong> posted <strong>WebApps's SEO Tips</strong></span>
+                <span>1 day ago</span>
+              </div>
+          </div>
+      </section>
+      <section class="messages">
+          <h3>MESSAGE USER</h3>
+          <div class="messages-container">
+            <input type="text" placeholder="Search for user">
+            <textarea name="message" rows="7" cols="45" placeholder="Message for User"></textarea>
+            <span>SEND</span>
+          </div>
+      </section>
+      <section class="settings">
+          <h3>SETTINGS</h3>
+          <div class="settings-container">
+                <div class="toggle-container">
+                    <span>Send Email Notifications</span>
+                    <div class="button r" id="button-3">
+                        <input type="checkbox" class="checkbox">
+                        <div class="knobs"></div>
+                        <div class="layer"></div>
+                    </div>
+                    </div>
+                <div class="toggle-container">
+                    <span>Set Profile to Public</span>
+                    <div class="button r" id="button-3">
+                        <input type="checkbox" class="checkbox">
+                        <div class="knobs"></div>
+                        <div class="layer"></div>
+                    </div>
+                </div>
+                <select class="timeZones">
+                    <option value="none">Select a Time Zone</option>
+                    <option value="tz-1">Time Zone 1</option>
+                    <option value="tz-2">Time Zone 2</option>
+                    <option value="tz-3">Time Zone 3</option>
+                    <option value="tz-4">Time Zone 4</option>
+                </select>
+                <div class="setting-buttons">
+                    <button>SAVE</button>
+                    <button>CANCEL</button>
+                </div>
+            </div>
+        </div>
+    </section>
     </main>
     <script src="javaScript/main.js"></script>
   </body>
