--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             />
           </svg>
         </div>
-        <img src="/assets/images/member-1.jpg" alt="person profile picture" />
+        <img src="assets/images/member-1.jpg" alt="person profile picture" />
         <span>Student Name</span>
       </section>
     </header>
